# python-web-application

./: .gitignore  pyproject.toml  setup.cfg
.github/workflows/: lint.yml  test.yml
python_web_application/: main.py
schedule_app/: config.py  db.py  main.py  models.py
templates/: add.html  item.html  list.html  schedule.html
tests/: test_python_web_application.py  test_schedule_app.py
