[tool.poetry]
name = "python-web-application"
version = "0.1.0"
description = ""
authors = ["Naomasa Murata <murata-n@kadokawa.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
Jinja2 = "^2.11.3"
aiofiles = "^0.6.0"
SQLAlchemy = "^1.4.11"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.4b1"
flake8 = "^3.9.1"
mypy = "^0.812"
isort = "^5.8.0"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
